kube-hello/k8s/school-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: school-api-deployment
  labels:
    app: school-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: school-api
  template:
    metadata:
      labels:
        app: school-api
    spec:
      containers:
        - name: school-api
          image: k8s-school-api
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: school-api-service
spec:
  selector:
    app: school-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
