kube-hello/k8s/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: default
spec:
  rules:
    - host: api.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: api-service
                port:
                  number: 80
